--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "pretty": "prettier --write ."
   },
