--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "2.28.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
