--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
           context: .
           # platforms: linux/amd64,linux/arm64
           push: true
-          tags: sconaway/slotify:latest
+          tags: sconaway/musa:latest
