--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretty": "prettier --write ."
   },
   "dependencies": {
-    "@prisma/client": "^2.28.0",
+    "@prisma/client": "3",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
@@ -25,7 +25,7 @@
     "@types/node": "^16.4.10",
     "@types/node-fetch": "^2.5.12",
     "nodemon": "^2.0.12",
-    "prisma": "^2.28.0",
+    "prisma": "3",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
