--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "p:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "3",
+    "@prisma/client": "^3.9.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
@@ -27,7 +27,7 @@
     "@types/node": "^16.4.10",
     "@types/node-fetch": "^2.5.12",
     "nodemon": "^2.0.12",
-    "prisma": "3",
+    "prisma": "^3.9.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
