--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "p:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^3.9.1",
-    "body-parser": "^1.19.0",
+    "@prisma/client": "^3.15.2",
+    "body-parser": "^1.20.1",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
-    "express": "4.17.1",
-    "express-handlebars": "^5.3.2",
-    "node-fetch": "^2.6.1",
-    "toad-scheduler": "^1.5.0"
+    "express": "^4.18.2",
+    "express-handlebars": "^5.3.5",
+    "node-fetch": "^2.6.7",
+    "toad-scheduler": "^1.6.1"
   },
   "devDependencies": {
-    "@types/express": "4.17.13",
+    "@types/express": "4.17.14",
     "@types/express-handlebars": "^5.3.1",
     "@types/node": "^16.4.10",
-    "@types/node-fetch": "^2.5.12",
-    "nodemon": "^2.0.12",
-    "prisma": "^3.9.1",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "@types/node-fetch": "^2.6.2",
+    "nodemon": "^2.0.20",
+    "prisma": "^3.15.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
