--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "nodemon": "^2.0.20",
     "prisma": "^3.15.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "~4.7.4"
   }
 }
