--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,13 @@ jobs:
       #     registry: ghcr.io
       #     username: ${{ github.repository_owner }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
-      - name: build and push (shell script)
-        run: |
-          ./build_image.sh
-      # -
-      #   name: Build and push
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     platforms: linux/amd64, linux/arm64
-      #     push: true
-      #     tags: sconaway/musa:latest
+      # - name: build and push (shell script)
+      #   run: |
+      #     ./build_image.sh
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64, linux/arm64
+          push: true
+          tags: sconaway/musa:latest
