--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^2.6.8",
     "toad-scheduler": "^2.2.0"
   },
   "devDependencies": {
     "@tsconfig/node18-strictest": "^1.0.0",
     "@types/express": "4.17.16",
+    "@types/node-fetch": "^2.6.2",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "prisma": "4",
