--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,5 @@ jobs:
           platforms: linux/amd64, linux/arm64
           push: true
           tags: sconaway/musa:latest
+        # only run if commit doesn't contain [ci skip]
+        if: "!contains(github.event.head_commit.message, '[ci skip]')"
