--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "pretty": "prettier --write .",
     "p:gen": "npx prisma generate",
     "p:deploy": "prisma migrate deploy",
-    "p:studio": "prisma studio"
+    "p:studio": "prisma studio",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "@prisma/client": "4",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6",
-    "node-fetch": "^2.6.8",
-    "toad-scheduler": "^2.2.0"
+    "express-handlebars": "^7.0.7",
+    "node-fetch": "^2.6.11",
+    "toad-scheduler": "^3.0.0"
   },
   "devDependencies": {
-    "@tsconfig/node18-strictest": "^1.0.0",
-    "@types/express": "4.17.16",
-    "@types/node-fetch": "^2.6.2",
-    "@types/node": "^18.11.18",
-    "nodemon": "^2.0.20",
+    "@tsconfig/node20": "^1.0.1",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.3.1",
+    "@types/node-fetch": "^2.6.4",
+    "nodemon": "^2.0.22",
     "prisma": "4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   }
 }
