--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "musa",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "dev": "nodemon --watch src --exec yarn node --loader ts-node/esm  ./src/index.ts",
     "pretty": "prettier --write .",
-    "p:gen": "npx prisma generate",
+    "p:gen": "yarn prisma generate",
     "p:deploy": "prisma migrate deploy",
     "p:studio": "prisma studio",
     "clean": "rm -rf dist"
@@ -15,11 +16,11 @@
   "dependencies": {
     "@prisma/client": "4",
     "body-parser": "^1.20.2",
-    "chalk": "^4.1.2",
+    "chalk": "^5.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "node-fetch": "^2.6.11",
+    "node-fetch": "^3.3.1",
     "toad-scheduler": "^3.0.0"
   },
   "devDependencies": {
